<resources>
    <string name="app_name">Team51Project1</string>
    <string name="title_home">Home</string>
    <string name="title_classes">Classes</string>
    <string name="title_assignments">Assignments</string>
    <string name="title_exams">Exams</string>
    <string name="title_tasks">To-Do List</string>

    <!-- common button titles -->
    <string name="button_delete">Delete</string>
    <string name="button_add">Add</string>
    <string name="button_edit">Edit</string>

    <!-- hint inputs -->
    <string name="inputDueDate">Due Date</string>
    <string name="inputTask">Task Name</string>
    <string name="inputAssocClass">Associated Class</string>
    <string name="inputClassName">Class Name/Section</string>
    <string name="inputTime">Time</string>
    <string name="inputProf">Professor</string>
    <string name="inputLocation">Building/Room #</string>
    <string name="inputDays">Class Days</string>

    <!-- specific inputs -->
    <string name="inputTaskExamName">Task/Exam Name</string>
    <string name="inputAssignName">Assignment Name</string>
    <string name="buttonAddTask">Add Task</string>
    <string name="buttonAddExam">Add Exam</string>
    <string name="inputTaskExamDate">Task/Exam Date</string>
    <string name="inputExamTime">Exam Time</string>

</resources>