<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">


    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.team51project1.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_classes"
            app:destination="@id/navigation_classes" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_assignments"
            app:destination="@id/navigation_assignments" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_exams"
            app:destination="@id/navigation_exams" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_todo"
            app:destination="@id/navigation_todo" />
    </fragment>

    <fragment
        android:id="@+id/navigation_classes"
        android:name="com.example.team51project1.ui.classes.ClassesFragment"
        android:label="@string/title_classes"
        tools:layout="@layout/fragment_classes" >

        <action
            android:id="@+id/action_navigation_classes_to_navigation_home2"
            app:destination="@id/navigation_home" />
    </fragment>

    <fragment
        android:id="@+id/navigation_assignments"
        android:name="com.example.team51project1.ui.assignments.AssignmentsFragment"
        android:label="@string/title_assignments"
        tools:layout="@layout/fragment_assignments" >

        <action
            android:id="@+id/action_navigation_assignments_to_navigation_home3"
            app:destination="@id/navigation_home" />
    </fragment>

    <fragment
        android:id="@+id/navigation_exams"
        android:name="com.example.team51project1.ui.exams.ExamsFragment"
        android:label="@string/title_exams"
        tools:layout="@layout/fragment_exams" >

        <action
            android:id="@+id/action_navigation_exams_to_navigation_home2"
            app:destination="@id/navigation_home" />
    </fragment>

    <fragment
        android:id="@+id/navigation_todo"
        android:name="com.example.team51project1.ui.todolist.TaskFragment"
        android:label="To-Do List"
        tools:layout="@layout/fragment_tasks" >
        <action
            android:id="@+id/action_navigation_todo_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>




</navigation>